added responsive hamburger menu feature for mobile nav

--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -11,7 +11,7 @@
     border: 3px solid #777;
   }
   
-  .gallery_container a > img {
+  .gallery_container > img {
     width: 100%;
     height: auto;
     border-radius: 43px;
