added Modals for external links *FINALLY!!*

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -95,6 +95,11 @@
 
     .header .leftSide button {
       display: flex;
+      background-color: darkgreen;
+      color: white;
+      border-radius: 5px;
+      border: none;
+      
     }
 
     /* .header .leftSide > a {
