--- a/src/components/IconLink.css
+++ b/src/components/IconLink.css
@@ -13,6 +13,7 @@
     box-shadow: 0 5px 15px -5px #000000;
     position: relative;
     overflow: hidden;
+    cursor: pointer;
   }
 
   .icon i {
