Edited icon and added link to previous portfolio website pre-react

--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -47,6 +47,11 @@
   letter-spacing: 0.5em;
 }
 
+#linkToPrev {
+  text-decoration: none;
+  color: #fff;
+}
+
 
 
 /* Hides the h1 to allow for nav function to remain */
